# svg2tsx

./: .prettierignore  CLAUDE.md  HANDOFF.md  README.md  TASK02_COMPLETION_REPORT.md  TASK03_COMPLETION_REPORT.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.claude/agents/: core-logic.md  ui-layout.md
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage-report.yml  release.yml
coverage/: coverage-final.json  index.html
coverage/options/model/: index.html  store.ts.html  types.ts.html
coverage/shared/lib/: index.html  utils.ts.html
docs/: PRD.md  claude-md-improvement-plan.md  custom-titlebar.md  macos-webview-background.md
docs/auto-update/: 01-setup.md  02-configuration.md  03-github-actions.md  04-frontend.md  README.md
docs/references/: scaling_llm_to_larger_codebases.md
docs/specs/: attribute-transform.md  tsx-template.md  ui-layout.md
docs/tasks/: README.md  task-01-setup.md  task-02-core-logic.md  task-03-ui-layout.md  task-04-file-tauri.md  task-05-advanced.md
e2e/: conversion-flow.spec.ts
scripts/: sync-version.js
src/: App.css  App.tsx  main.tsx  useTheme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: dialog.rs  file_io.rs  mod.rs
src/app/: App.tsx
src/app/hooks/: index.ts  (+1 more)
src/components/: index.ts
src/i18n/: index.ts
(+98 files in other folders)
